# prog3thedreamteam

./: .coverage  .gitignore  Dockerfile  README.md  README_TEMPLATE.md  README_TEMPLATE2.md  docker-compose.yml  pyproject.toml  requirements.txt
Database/: mysticburgers.csv
scrum/: burndown_template.xlsx
scrum/Extra+Old README files/: README_TEMPLATE.md
scrum/sprint1/: daily.md  planning.md  retrospective.md  review.md
scrum/sprint2/: daily.md  planning.md  retrospective.md  review.md
scrum/sprint3/: daily.md  planning.md  retrospective.md  review.md
scrum/uml/: classdiagram.wsd  sequencediagram.wsd  usecase.wsd
src/: create_admin.py  init_db.py  load_data.py  mysticmenu.sql  update_user_admin.py
src/app/: __init__.py  forms.py  models.py  routes.py  update_user_admin.py
src/static/: style.css
src/templates/: admin_dashboard.html  base.html  cart.html  create_recipe.html  dashboard.html  delete_recipe.html  index.html  update_recipe.html
tests/: test_routes.py  whitebox.py
